<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General Strings -->
    <string name="empty"></string>
    <string name="reset">Reset</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="canceled">Canceled</string>

    <!-- MainActivity -->
    <string name="app_name">Tree Height</string>
    <string name="methods">Please Select One Of The Methods</string>
    <string name="button_math">Mathematical</string>
    <string name="button_image_processing">Image Processing</string>
    <string name="action_settings">Settings</string>
    <string name="parcelable_image_uri_name">ImgUri</string>

    <!-- Math Activity -->
    <string name="title_activity_camera">Camera Activity</string>
    <string name="toast_angle_treetop">Angle at treetop = %.2fº</string>
    <string name="toast_angle_tree_bottom">Angle at tree bottom = %.2fº</string>
    <string name="toast_angle_treetop_invalid">Angle to treetop must be positive</string>
    <string name="toast_angle_tree_bottom_invalid">Angle to tree bottom must be negative</string>
    <string name="toast_angle_treetop_reset">Cleared treetop angle value</string>
    <string name="toast_angle_tree_bottom_reset">Cleared tree bottom angle value</string>
    <string name="toast_camera_not_supported_error">Camera Feature is not supported by this device</string>
    <string name="toast_camera_open_error">Error loading camera</string>
    <string name="text_view_math_angle">Angle = %.2f</string>
    <string name="text_view_math_tree_height">Tree Height = %.2f cm</string>
    <string name="text_view_math_treetop_image">Treetop Image</string>
    <string name="text_view_math_tree_bottom_image">Tree Bottom Image</string>
    <string name="button_read_angle">Read Angle</string>
    <string name="button_calculate_height">Find Height</string>
    <string name="action_instructions">Show/Hide Instructions</string>
    <string name="action_debugging_information">Show/Hide Debuggin Information</string>

    <!-- Image Processing Activity -->
    <string name="ip_title_activity_ip">Image Processing Activity</string>
    <string name="ip_action_gallery_img">Image from Gallery</string>
    <string name="ip_button_detect_tree">Detect Treetop</string>
    <string name="ip_button_detect_reference">Detect the A4</string>
    <string name="ip_button_calculate_height">Calculate Tree Height</string>
    <string name="ip_progress_dialog_treetop">Detecting Treetop&#8230;</string>
    <string name="ip_toast_treetop_detected_row">Treetop Detected (Row: %d)</string>
    <string name="ip_toast_treetop_not_detected">No Treetop Detected .. try touch input or use a different image</string>
    <string name="ip_toast_touch_enable_a4">A4 paper detection touch input enabled</string>
    <string name="ip_progress_dialog_reference">Detecting A4 paper&#8230;</string>
    <string name="ip_toast_reference_detected_row">A4 Paper Detected (Rows: %1$d-%2$d)</string>
    <string name="ip_toast_reference_not_detected">No A4 Paper Detected .. try again or use different image</string>
    <string name="ip_button_task_tree_height">Tree Height = %.2f cm</string>
    <string name="ip_text_view_tree_height">Tree Height = ( %1$d * %2$.2f ) / %3$d = %4$.2f cm</string>
    <string name="ip_verify_detection_message">Is the detection successful?</string>
    <string name="ip_toast_reference_above_treetop">A4 paper must be below treetop</string>
    <string name="ip_toast_touch_enable_treetop">Treetop detection touch input enabled</string>
    <string name="ip_toast_load_image_path_error">Error locating the file path</string>
    <string name="ip_toast_load_image_error">Error loading image</string>

    <!-- Main Image Processing Photo Source Dialog -->
    <string name="dialog_photo_source_title">Where is the tree?</string>
    <string name="dialog_photo_source_text_view_need_tree_a4">For this approach, you need a picture of a tree with an A4 paper standing next to it</string>
    <string name="dialog_photo_source_text_view_ip_where_photo">Do you have that picture?</string>
    <string name="dialog_photo_source_button_ip_gallery">Yes.\n In my gallery!</string>
    <string name="dialog_photo_source_button_ip_camera">No.\n I will take one!</string>

    <!-- Math Person Height Dialog -->
    <string name="dialog_camera_height_title">Your Height</string>
    <string name="dialog_camera_height_text_view_need_height">For this measurement approach you will need to know your height</string>
    <string name="dialog_camera_height_text_view_what_is_your_height">What is your height?</string>
    <string name="dialog_camera_height_edit_text_your_height_hint">Enter your height here</string>
    <string name="dialog_camera_height_text_view_cm_unit">cm</string>
    <string name="dialog_camera_height_check_box_instructions">Enable Helping Instructions</string>

    <!-- Math Treetop Dialog -->
    <string name="dialog_treetop_title">Highest Point!</string>
    <string name="dialog_treetop_text_view_instruction_1">Now hold your device at your height level, and point to the treetop</string>
    <string name="dialog_treetop_text_view_instruction_2">When the cross is pointing at the treetop, press the capture button</string>
    <string name="dialog_treetop_toast_height_below_zero">Input must be greater than zero</string>
    <string name="dialog_treetop_toast_height_error">Invalid input</string>

    <!-- Math Tree Bottom Dialog -->
    <string name="dialog_tree_bottom_title">Lowest Point!</string>
    <string name="dialog_tree_bottom_text_view_instruction_1">We have to do this again, but this time for tree bottom. Don\'t forget! The device has to be at your height level</string>
    <string name="dialog_tree_bottom_text_view_instruction_2">Again, try to press the button when the cross is pointing on the lowest point of tree</string>

    <!-- Math Tree How Dialog -->
    <string name="dialog_math_how_title">How Did We Calculate The Tree Height?</string>
    <string name="dialog_math_how_text_view_instruction_1">To calculate the height of the tree, we needed three peices of information:</string>
    <string name="dialog_math_how_text_view_instruction_2">Your height</string>
    <string name="dialog_math_how_text_view_instruction_3">Angle to treetop</string>
    <string name="dialog_math_how_text_view_instruction_4">Angle to tree bottom</string>
    <string name="dialog_math_how_text_view_instruction_5">Using these information, we have the following setting:\n <font color="purple">Two triangles\n Two known angles\n A known side of the small triangle</font></string>
    <string name="dialog_math_how_text_view_instruction_6">Tree height is equal to the sum of the sides of triangles opposite to the angles we have measured.\nSince we have know the measurement of the lower side (same as our height), we can calculate the upper side, by using the tan formula twice:</string>

    <!-- Image Processing Treetop Dialog -->
    <string name="dialog_ip_treetop_title">Treetop!</string>
    <string name="dialog_ip_treetop_text_view_instruction1">Touch treetop point in image</string>

    <!-- Image Processing Reference Dialog -->
    <string name="dialog_ip_reference_title">Paper!</string>
    <string name="dialog_ip_reference_text_view_instruction1">Using two fingers, touch the boundaries of area where the A4 paper is</string>

</resources>