<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true" >

    <TextView
        android:id="@+id/textViewNeedHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:text="@string/dialog_camera_height_text_view_need_height" />

    <ImageView
        android:id="@+id/imageViewMathTreetop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNeedHeight"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/empty"
        android:padding="10dp"
        android:src="@drawable/height_person" />

    <TextView
        android:id="@+id/textViewWhatIsYourHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageViewMathTreetop"
        android:padding="10dp"
        android:text="@string/dialog_camera_height_text_view_what_is_your_height" />

    <EditText
        android:id="@+id/editTextYourHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewWhatIsYourHeight"
        android:layout_toStartOf="@+id/textViewCmUnit"
        android:ems="10"
        android:hint="@string/dialog_camera_height_edit_text_your_height_hint"
        android:inputType="numberDecimal"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textViewCmUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextYourHeight"
        android:layout_alignBottom="@+id/editTextYourHeight"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:text="@string/dialog_camera_height_text_view_cm_unit" />

    <CheckBox
        android:id="@+id/checkBoxInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextYourHeight"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:checked="true"
        android:text="@string/dialog_camera_height_check_box_instructions" />

    <Button
        android:id="@+id/buttonConfrimHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxInstructions"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/confirm" />

</RelativeLayout>