<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient_math_sky"
    tools:context="com.amb12u.treeheight.MainActivity" >

    <Button
        android:id="@+id/buttonIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickDesc"
        android:text="@string/button_image_processing" />

    <Button
        android:id="@+id/buttonMath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonIP"
        android:layout_alignParentStart="true"
        android:onClick="onClickDesc"
        android:text="@string/button_math" />

    <ImageView
        android:id="@+id/imageViewIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonMath"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/empty"
        android:padding="10dp"
        android:src="@drawable/intro" />

</RelativeLayout>