<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewIpTreeA4"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewIpTreetop1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:text="@string/dialog_ip_treetop_text_view_instruction1" />

        <ImageView
            android:id="@+id/imageViewIpTreetop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewIpTreetop1"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/empty"
            android:padding="10dp"
            android:src="@drawable/ip_treetop" />

        <Button
            android:id="@+id/buttonOkay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewIpTreetop"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:text="@string/ok" />

        <ImageView
            android:id="@+id/imageViewIpTouch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/buttonOkay"
            android:layout_alignTop="@+id/imageViewIpTreetop"
            android:layout_marginEnd="63dp"
            android:layout_marginTop="34dp"
            android:contentDescription="@string/empty"
            android:src="@drawable/ip_touch" />
    </RelativeLayout>

</ScrollView>