<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <FrameLayout
        android:id="@+id/cameraPreviewLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" >

        <com.amb12u.treeheight.CameraPreview
            android:id="@+id/cameraPreview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/buttonReadAngle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:enabled="false"
            android:onClick="onClickReadAngle"
            android:text="@string/button_read_angle"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonUndoAngle"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/buttonReadAngle"
            android:layout_marginBottom="40dp"
            android:layout_toStartOf="@+id/buttonReadAngle"
            android:enabled="false"
            android:onClick="onClickResetAngle"
            android:text="@string/reset"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonCalculateHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/buttonReadAngle"
            android:layout_marginBottom="40dp"
            android:layout_toEndOf="@+id/buttonReadAngle"
            android:enabled="false"
            android:onClick="onClickCalculateHeight"
            android:text="@string/button_calculate_height"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/seekBarZoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonReadAngle"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textViewAngleNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seekBarZoom"
            android:layout_centerHorizontal="true"
            android:background="#66000000"
            android:gravity="start"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFFFF" />

        <View
            android:id="@+id/horizontal_cross"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@android:color/darker_gray" />

        <View
            android:id="@+id/vertical_cross"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_above="@+id/buttonReadAngle"
            android:layout_centerHorizontal="true"
            android:background="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/imageViewGrass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:alpha="0.5"
            android:contentDescription="@string/empty"
            android:src="@drawable/grass"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageViewSky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seekBarZoom"
            android:layout_alignBottom="@+id/imageViewGrass"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/gradient_math_sky"
            android:contentDescription="@string/empty"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageViewCloud1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/empty"
            android:padding="20dp"
            android:src="@drawable/math_cloud"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageViewCloud2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewCloud1"
            android:layout_toEndOf="@+id/imageViewCloud1"
            android:contentDescription="@string/empty"
            android:src="@drawable/math_cloud"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewCameraHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/empty"
            android:textColor="#ff0000" />

        <TextView
            android:id="@+id/textViewX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewCameraHeight"
            android:layout_marginEnd="17dp"
            android:layout_toStartOf="@+id/buttonReadAngle"
            android:text="@string/empty"
            android:textColor="#ff0000" />

        <TextView
            android:id="@+id/textViewY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignStart="@+id/textViewX"
            android:layout_below="@+id/textViewX"
            android:text="@string/empty"
            android:textColor="#ff0000" />

        <TextView
            android:id="@+id/textViewZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignStart="@+id/textViewY"
            android:layout_below="@+id/textViewY"
            android:text="@string/empty"
            android:textColor="#ff0000" />

        <TextView
            android:id="@+id/textViewTreetopAngle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/horizontal_cross"
            android:text="@string/empty"
            android:textColor="#ff0000" />

        <TextView
            android:id="@+id/textViewTreeBottomAngle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignStart="@+id/textViewTreetopAngle"
            android:layout_below="@+id/textViewTreetopAngle"
            android:text="@string/empty"
            android:textColor="#ff0000" />

        <TextView
            android:id="@+id/textViewAngle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/horizontal_cross"
            android:layout_alignParentStart="true"
            android:layout_toEndOf="@+id/buttonReadAngle"
            android:text="@string/empty"
            android:textColor="#ff0000" />

        <TextView
            android:id="@+id/textViewTotalHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewTreeBottomAngle"
            android:layout_marginTop="20dp"
            android:text="@string/empty"
            android:textColor="#ff0000" />

        <TextView
            android:id="@+id/textViewFormula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewTotalHeight"
            android:text="@string/empty"
            android:textColor="#ff0000" />

        <ImageView
            android:id="@+id/imageViewPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/horizontal_cross"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/empty"
            android:padding="10dp"
            android:src="@drawable/person_click" />

        <TextView
            android:id="@+id/textViewTreetop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="#66000000"
            android:padding="10dp"
            android:text="@string/text_view_math_treetop_image"
            android:textColor="#FFFFFFFF"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewTreeBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="#66000000"
            android:padding="10dp"
            android:text="@string/text_view_math_tree_bottom_image"
            android:textColor="#FFFFFFFF"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageViewTreetop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewTreetop"
            android:contentDescription="@string/empty"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/imageViewTreeBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/textViewTreeBottom"
            android:contentDescription="@string/empty"
            android:padding="10dp" />
    </RelativeLayout>

</RelativeLayout>